crates/milli/src/search/facet/snapshots/facet_sort_descending.rs/filter_sort_descending/1.snap
---
source: crates/milli/src/search/facet/facet_sort_descending.rs
---
[252, ]
[243, ]
[242, ]
[238, ]
[236, ]
[232, ]
[231, ]
[227, ]
[226, ]
[224, ]
[223, ]
[220, ]
[219, ]
[216, ]
[210, ]
[209, ]
[208, ]
[207, ]
[202, ]
[297, ]
[295, ]
[293, ]
[292, ]
[286, ]
[282, ]
[281, ]
[280, ]
[279, ]
[278, ]
[277, ]
[269, ]
[267, ]
[265, ]
[264, ]
[263, ]
[262, ]
[260, ]
[257, ]
[256, ]
[251, ]
[250, ]
[247, ]
[244, ]
[241, ]
[233, ]
[228, ]
[225, ]
[213, ]
[211, ]
[205, ]
[204, ]
[203, ]
